--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -22,18 +22,36 @@
                             <span class="icon-bar"></span>
                         </button>
                     </div>
-                    <div class="navbar-collapse collapse" id="navbar-main">
-                        <ul class="nav navbar-nav navbar-right">
+                    <div class="navbar-collapse collapse">
+
+                        <ul class="nav navbar-nav">
                             <li>
                                 <a href="{{ path('images_new') }}">Crée une carte</a>
+                            </li>
+                        </ul>
+
+                        <ul class="nav navbar-nav navbar-right">
+                            <li>
+                                {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                                    <a class="nav-link" href="{{ path('fos_user_profile_edit') }}">
+                                        Connecté en tant que: {{ app.user.username }}</a>
+                                {% else %}
+                                    <a class="nav-link"
+                                       href="{{ path('fos_user_security_login') }}">{{ 'Connexion'|trans({}, 'FOSUserBundle') }}</a>
+                                {% endif %}
+                            </li>
+                            <li>
+                                {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                                    <a href="{{ path('fos_user_security_logout') }}">{{ 'Se deconnecter'|trans({}, 'FOSUserBundle') }}</a>
+                                {% else %}
+                                    <a href="{{ path('fos_user_registration_register') }}">{{ 'Inscription'|trans({}, 'FOSUserBundle') }}</a>
+                                {% endif %}
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
         {% endblock %}    
-
-
 
     {% block body %}{% endblock %}
     {% block javascripts %}
@@ -42,5 +60,10 @@
         <script src="{{asset('bootstrap/dist/js/bootstrap.min.js')}}"></script>
 
     {% endblock %}
+    
+        {% block mainJavascripts %}
+
+    {% endblock %}
+    
 </body>
 </html>
